Тестовый вариант Плохо работают метри прометеуса rps, автоскелинг работает

--- a/my-nginx/templates/deployment.yaml
+++ b/my-nginx/templates/deployment.yaml
@@ -1,3 +1,4 @@
+# templates/deployment.yaml (обновленная версия)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -11,11 +12,15 @@ spec:
     metadata:
       labels:
         app: {{ include "my-static-site.name" . }}
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9113"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
         - name: nginx
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-          imagePullPolicy: Never  # <-- ДОБАВЬТЕ ЭТУ СТРОКУ
+          imagePullPolicy: Never
           ports:
             - name: http
               containerPort: 80
@@ -36,5 +41,13 @@ spec:
               cpu: 50m
               memory: 64Mi
             limits:
-              cpu: 200m
-              memory: 256Mi
+              cpu: 100m
+              memory: 128Mi
+        - name: nginx-exporter
+          image: nginx/nginx-prometheus-exporter:1.3.0  
+          imagePullPolicy: Never  
+          args:
+            - "--nginx.scrape-uri=http://127.0.0.1:80/stub_status"  
+          ports:
+            - name: metrics
+              containerPort: 9113
