--- a/my-nginx/templates/servicemonitor.yaml
+++ b/my-nginx/templates/servicemonitor.yaml
@@ -1,13 +1,27 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "my-static-site.fullname" . }}-metrics
+  labels:
+    app: {{ include "my-static-site.name" . }}
+spec:
+  ports:
+    - name: metrics
+      port: 9113
+      targetPort: metrics
+  selector:
+    app: {{ include "my-static-site.name" . }}
+---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "my-static-site.fullname" . }}
   labels:
-    release: prometheus-stack  
+    release: prometheus-stack
 spec:
   selector:
     matchLabels:
       app: {{ include "my-static-site.name" . }}
   endpoints:
-    - port: http
+    - port: metrics
       interval: 15s
