--- a/my-nginx/templates/service.yaml
+++ b/my-nginx/templates/service.yaml
@@ -5,11 +5,12 @@ metadata:
   labels:
     app: {{ include "my-static-site.name" . }} 
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 80
       targetPort: 80
       protocol: TCP
       name: http
+      nodePort: 31693
   selector:
     app: {{ include "my-static-site.name" . }}
