--- a/my-nginx/values.yaml
+++ b/my-nginx/values.yaml
@@ -11,15 +11,14 @@ service:
 
 resources:
   requests:
-    cpu: 10m
-    memory: 16Mi
+    cpu: 50m      # Базовые потребности NGINX
+    memory: 32Mi
   limits:
-    cpu: 5m
-    memory: 8Mi
+    cpu: 100m     # Достаточно для работы + автоскейлинга
+    memory: 64Mi
 
 autoscaling:
   enabled: true
   minReplicas: 1
-  maxReplicas: 10
-  targetCPUUtilizationPercentage: 40
-
+  maxReplicas: 7      
+  targetCPUUtilizationPercentage: 30  # Повысил порог для стабильности
