--- a/my-nginx/templates/deployment.yaml
+++ b/my-nginx/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
               memory: 128Mi
         - name: nginx-exporter
           image: nginx/nginx-prometheus-exporter:1.3.0  
-          imagePullPolicy: Never  
+          imagePullPolicy: IfNotPresent  
           args:
             - "--nginx.scrape-uri=http://127.0.0.1:80/stub_status"  
           ports:
