--- a/my-nginx/keda-nginx-simple.yaml
+++ b/my-nginx/keda-nginx-simple.yaml
@@ -8,8 +8,23 @@ spec:
     name: my-static-site-my-static-site
   minReplicaCount: 1
   maxReplicaCount: 5
-  pollingInterval: 30
-  cooldownPeriod: 60
+  pollingInterval: 15           
+  cooldownPeriod: 30            
+  advanced:
+    horizontalPodAutoscalerConfig:
+      behavior:
+        scaleDown:
+          stabilizationWindowSeconds: 60  
+          policies:
+          - type: Pods
+            value: 1
+            periodSeconds: 30   
+        scaleUp:
+          stabilizationWindowSeconds: 0
+          policies:
+          - type: Percent
+            value: 100
+            periodSeconds: 15 
   triggers:
   - type: prometheus
     metadata:
