--- a/my-nginx/values.yaml
+++ b/my-nginx/values.yaml
@@ -11,14 +11,14 @@ service:
 
 resources:
   requests:
-    cpu: 50m      # Базовые потребности NGINX
+    cpu: 50m      
     memory: 32Mi
   limits:
-    cpu: 100m     # Достаточно для работы + автоскейлинга
+    cpu: 100m     
     memory: 64Mi
 
-autoscaling:
-  enabled: true
-  minReplicas: 1
-  maxReplicas: 7      
-  targetCPUUtilizationPercentage: 30  # Повысил порог для стабильности
+
+grafana:
+  expose: true
+  nodePort: 30300
+
