--- a/my-nginx/templates/deployment.yaml
+++ b/my-nginx/templates/deployment.yaml
@@ -1,4 +1,3 @@
-# templates/deployment.yaml (обновленная версия)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,8 +18,8 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-          imagePullPolicy: Never
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
               containerPort: 80
@@ -36,18 +35,12 @@ spec:
               port: 80
             initialDelaySeconds: 2
             periodSeconds: 5
-          resources:
-            requests:
-              cpu: 50m
-              memory: 64Mi
-            limits:
-              cpu: 100m
-              memory: 128Mi
+          resources: {{- toYaml .Values.resources | nindent 12 }}
         - name: nginx-exporter
-          image: nginx/nginx-prometheus-exporter:1.3.0  
-          imagePullPolicy: IfNotPresent  
+          image: nginx/nginx-prometheus-exporter:1.3.0
+          imagePullPolicy: IfNotPresent
           args:
-            - "--nginx.scrape-uri=http://127.0.0.1:80/stub_status"  
+            - "--nginx.scrape-uri=http://127.0.0.1:80/stub_status"
           ports:
             - name: metrics
               containerPort: 9113
