--- a/my-nginx/templates/servicemonitor.yaml
+++ b/my-nginx/templates/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.prometheus.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
@@ -17,3 +18,4 @@ spec:
   - port: prometheus
     interval: 15s
     path: /metrics
+{{- end }}
