--- a/my-nginx/templates/hpa.yaml
+++ b/my-nginx/templates/hpa.yaml
@@ -8,8 +8,8 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: my-static-site-my-static-site
-  minReplicas: 1
-  maxReplicas: 5
+  minReplicas: {{ .Values.hpa.minReplicas }}
+  maxReplicas: {{ .Values.hpa.maxReplicas }}
   metrics:
   - type: External
     external:
@@ -19,17 +19,17 @@ spec:
           matchLabels: {}
       target:
         type: AverageValue
-        averageValue: "5000m"  # 0.5 RPS на каждый под
+        averageValue: "{{ .Values.hpa.targetAverageValue }}"  
   behavior:
     scaleUp:
-      stabilizationWindowSeconds: 60
+      stabilizationWindowSeconds: {{ .Values.hpa.up_stabilizationWindowSeconds }}
       policies:
       - type: Pods
         value: 1
         periodSeconds: 60
       selectPolicy: Min
     scaleDown:
-      stabilizationWindowSeconds: 30
+      stabilizationWindowSeconds: {{ .Values.hpa.down_stabilizationWindowSeconds }}
       policies:
       - type: Pods
         value: 1
